# invenio-audit-logs

./: .editorconfig  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.md  README.rst  babel.ini  run-tests.sh  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml  tests.yml
.tx/: config
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
invenio_audit_logs/: __init__.py  backends.py  builders.py  config.py  errors.py  ext.py  indexer.py  proxies.py  views.py
invenio_audit_logs/alembic/: 1743073617_create_audit_logs_branch.py  1743073720_create_audit_logs_table.py
invenio_audit_logs/records/: __init__.py  api.py  hooks.py  models.py
invenio_audit_logs/records/dumpers/: __init__.py  json.py
invenio_audit_logs/records/templates/os-v1/: datastream-log-v1.0.0.json
invenio_audit_logs/records/templates/os-v2/: datastream-log-v1.0.0.json
invenio_audit_logs/resources/: __init__.py  config.py  resource.py
invenio_audit_logs/services/: __init__.py  api.py  config.py  generators.py  permissions.py  results.py  schema.py  service.py  uow.py
invenio_audit_logs/templates/invenio_audit_logs/: base.html  index.html
tests/: conftest.py  test_invenio_audit_logs.py
