# -*- coding: utf-8 -*-
#
# Copyright (C) 2025 CERN.
#
# Invenio-Audit-Logs is free software; you can redistribute it and/or modify
# it under the terms of the MIT License; see LICENSE file for more details.


[metadata]
name = invenio-audit-logs
version = attr: invenio_audit_logs.__version__
description = Module providing audit logging features for Invenio.
long_description = file: README.rst, CHANGES.rst
keywords = invenio TODO
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-audit-logs
classifiers =
    Development Status :: 1 - Planning

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
zip_safe = False
install_requires =
    invenio-base>=2.0.0,<3.0.0
    invenio-i18n>=3.0.0,<4.0.0
    invenio-logging>=4.1.0,<5.0.0

[options.extras_require]
tests =
    pytest-black-ng>=0.4.0
    pytest-invenio>=3.0.0,<4.0.0
    invenio-app>=2.0.0,<3.0.0
    Sphinx>=4.5.0
# TODO: Check if the module uses search
elasticsearch7 =
    invenio-search[elasticsearch7]>=3.0.0,<4.0.0
opensearch1 =
    invenio-search[opensearch1]>=3.0.0,<4.0.0
opensearch2 =
    invenio-search[opensearch2]>=3.0.0,<4.0.0

[options.entry_points]
invenio_base.apps =
    invenio_audit_logs = invenio_audit_logs:InvenioAuditLogs
invenio_logging.engine.builders =
    audit = invenio_audit_logs:AuditLogBuilder

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401,D403

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_audit_logs --cov-report=term-missing
testpaths = docs tests invenio_audit_logs

[compile_catalog]
directory = invenio_audit_logs/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_audit_logs/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_audit_logs/translations/messages.pot
output-dir = invenio_audit_logs/translations/

[update_catalog]
input-file = invenio_audit_logs/translations/messages.pot
output-dir = invenio_audit_logs/translations/
